--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-lg-8 mx-auto">
 
-        <p class="lead mb-5">
+        <p class="mb-5">
           La protection de vos données personnelles est une priorité pour "Tous bien intégrés".
           Cette politique vous informe sur la manière dont nous collectons, utilisons et protégeons vos données.
         </p>
