--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -37,6 +37,12 @@
         <button class="btn btn-outline-primary"
                 data-articles-filter-target="filterBtn"
                 data-action="click->articles-filter#filter"
+                data-country="general">
+          Général 🌍
+        </button>
+        <button class="btn btn-outline-primary"
+                data-articles-filter-target="filterBtn"
+                data-action="click->articles-filter#filter"
                 data-country="belgique">
           Belgique 🇧🇪
         </button>
