--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -192,7 +192,7 @@
               </p>
 
               <p>
-                Nos trois pays accueillent sur leur sol des institutions et organisations européennes.
+                Les trois pays accueillent sur leur sol des institutions et organisations européennes.
                 Notre présence ici revêt donc une signification toute particulière.
               </p>
 
