--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -93,7 +93,7 @@
       <div class="col-lg-10 mx-auto text-center">
         <p class="mb-0">
           Français installés en Belgique, aux Pays-Bas et au Luxembourg, que notre établissement soit récent ou ancien,
-          nous sommes bien intégrés et nous vous le souhaitons également car c'est comme cela que nous concevons
+          nous sommes bien intégrés et nous vous le souhaitons également. C'est comme cela que nous concevons
           l'exercice de la citoyenneté européenne.
         </p>
       </div>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="mt-4">
-          <h3 class="h5 mb-3">Rappeler qui nous sommes</h3>
+          <h3 class="h5 mb-3">Qui nous sommes</h3>
           <p class="text-muted">
             À l'étranger, il nous arrive de penser ou de percevoir que la France s'éloigne de nous et cela peut se manifester
             de diverses manières. Cette problématique n'est pas nouvelle ; elle questionnait déjà nos compatriotes à la révolution
@@ -183,7 +183,7 @@
               <p>
                 Bienvenue chez <strong>"Tous bien intégrés"</strong>, la plateforme de campagne du
                 <strong>Mouvement démocrate (MoDem)</strong> pour les élections des représentants des
-                Français de l'étranger du <strong>31 mai 2026</strong> au Benelux.
+                Français (résidant) à l'étranger du <strong>31 mai 2026</strong> au Benelux.
               </p>
 
               <p>
@@ -208,8 +208,8 @@
                   <strong><i class="fas fa-vote-yea me-2"></i>Élections du 31 mai 2026</strong><br>
                   Les élections du 31 mai 2026 sont un rendez-vous essentiel pour notre communauté.
                   Les Français établis hors de France éliront leurs représentants qui seront eux-mêmes
-                  électeurs pour les membres de l'Assemblée des Français de l'étranger et pour les
-                  12 sénateurs des Français de l'étranger.
+                  électeurs pour les membres de l'Assemblée des Français (résidant) à l'étranger et pour les
+                  12 sénateurs des Français (résidant) à l'étranger.
                 </p>
               </div>
 
