--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,10 +18,10 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false">
-            Qui sommes-nous <i class="fas fa-chevron-down ms-1" style="font-size: 0.7rem;"></i>
+            Qui nous sommes <i class="fas fa-chevron-down ms-1" style="font-size: 0.7rem;"></i>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Qui sommes-nous", about_path(anchor: "qui-sommes-nous"), class: "dropdown-item" %></li>
+            <li><%= link_to "Qui nous sommes", about_path(anchor: "qui-sommes-nous"), class: "dropdown-item" %></li>
             <li><%= link_to "Notre mission", about_path(anchor: "servir"), class: "dropdown-item" %></li>
             <li><%= link_to "Notre spécificité", about_path(anchor: "specificite"), class: "dropdown-item" %></li>
             <li><%= link_to "Les candidats", about_path(anchor: "candidats"), class: "dropdown-item" %></li>
