--- a/app/views/pages/how_to_vote.html.erb
+++ b/app/views/pages/how_to_vote.html.erb
@@ -33,7 +33,7 @@
         <div class="voting-step mb-5">
           <div class="step-number">1</div>
           <div class="step-content">
-            <h2 class="h4 mb-3">Être inscrit à la liste électorale consulaire</h2>
+            <h2 class="h4 mb-3">Être inscrit sur la liste électorale consulaire</h2>
             <p class="mb-3">
               Je ne connais pas cette liste, je suis perdu, je me rends <%= link_to "ici", "https://www.service-public.fr/particuliers/vosdroits/F34778", target: "_blank", rel: "noopener" %>.
             </p>
